--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+$color-primary: blueviolet;
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -17,6 +19,12 @@
   align-items: center;
 }
 
+.wrapper {
+  a {
+    margin-right: 2rem;
+  }
+}
+
 .footer {
   width: 100%;
   height: 100px;
@@ -34,7 +42,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: $color-primary;
   text-decoration: none;
 }
 
